--- a/HTML/tag.html
+++ b/HTML/tag.html
@@ -27,7 +27,7 @@ ignores it.
 
 	<hr style="background-color:black;">
 	<hr>
-	<h3>all the tag for text using diffrence tag </h3>
+	<h3>HTML Text Formatting</h3>
 	<b> - Bold text--</b>
 <strong> - Important text----</strong><br>
 <i> - Italic text----</i><br>
@@ -39,6 +39,20 @@ ignores it.
 <sub> - Subscript text----</sub><br>
 <sup> - Superscript tex---</sup><br>
 <hr>
+<p>Here is a quote from WWF's website:</p>
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
+</blockquote>
+<hr>
+//property of style attributes
+<h3 style="background-color:green; text-align: center;">my hobby is a cricket</h3>
+<p style="background-color:tomato; text-align: center;">I love my india</p>
+<hr>
+<!--comment-->
+<!--HTML RGB and RGBA Colors-->
+
+
+
 
 
 
