--- a/Assignment/HTML/User.html
+++ b/Assignment/HTML/User.html
@@ -58,7 +58,7 @@
 
       <label>
         <input type="radio" name="Card" value="VISA">
-        <img src="C:\Users\Admin\Desktop\visa.png" alt="center">
+        <img src="C:\Users\Admin\Desktop\visa.png" >
         VISA
       </label>
 
