--- a/Assignment/HTML/User.html
+++ b/Assignment/HTML/User.html
@@ -34,6 +34,7 @@
     <form style=" align-items: center;" ; title="User Form">
       <h1 CLASS="h1">USER FORM</h1>
       <h3 style="color:blueviolet;">Your Details : </h3>
+      <div class="rows 1">
       <label for="Name"> <strong>Name : </strong></label>
       <input type="text" name="Name" id="Name" placeholder="first name and Last name " size="20"> <br>
       <label for="email"> <Strong>Email: </Strong> </label>
